--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,3 +1,7 @@
 {
-  "hello": "hello"
+  "hello": "hello",
+  "articles": "articles",
+  "about_us": "about us",
+  "contact_us": "contact us",
+  "help": "help"
 }
